# CPU-L

./: Divider.qml  README.md  TitleBox.qml  cpuIconxcf.xcf  main.cpp  main.qml  myclass.cpp  myclass.h  qml.qrc  qtQuickTest.pro
cpu-l-lib/: cpu-l-lib_test.cpp  gfxinfo  gfxinfo.cpp  gfxinfo.h  glxinfo  glxinfo_common_lib.cpp  glxinfo_lib.c  glxinfo_lib.h  meson.build  samples
